--- a/README
+++ b/README
@@ -1,118 +1,16 @@
-HOW TO GET AND INSTALL MINIX 2.0.2
+This repository containes the changes I made to the original Minix 2.0.2 source code
+to run on the Amstrad PC5086.
 
-This directory and subdirectories contains Minix version 2.0.2, a small
-educational UNIX-like system for IBM PC's and compatibles. 
-
-Before installing Minix, do the unthinkable and read the installation
-manual usage(8). It is in the following files in various forms: 
-
-  usage.ps              - PostScript
-  usage.t               - Troff -man source
-  usage.txt             - Flat ASCII text
-
-Alternatively, with a web browser you can view the whole manual
-page set. The page to start with is usage(8). 
-
-Before fetching Minix, you should get the checksum list (to verify
-correct transmission and unpacking). If you do not already have it, you
-will need the program to compute the checksums on your machine,
-crc.c: 
-
-  crclist               - CRC's of all the files here
-  crc.c                 - Command to make CRC checksums
-
-Eventually, you may also want these files: 
-
-  changes-2.0.2         - List of changes between 2.0.0 and 2.0.2
-  psman/                - All manuals in PostScript form
-  bugs                  - List of bugs in 2.0.2 (none as yet)
-  fixes/                - Fixes to bugs in 2.0.2 (none as yet)
-  misc/                 - Additional documents: installation example,
-                          network config, XT installation.
-  alpha/                - Changes destined to be in the next distribution.
-
-
-Minix for the Intel architecture comes in four flavors: 
-
-  - Regular (for 386, 486, and Pentium machines)
-  - Small (for 8086 and 286 machines)
-  - Tiny (for 8086 and 286 machines with small memories and/or 360K
-    diskette drives)
-  - Running under DOS/Windows.  (Recommended; trivial to install.)
-
-The bits and pieces of each flavor are distributed over the i386, i86, 
-xt, and src directories, depending on architecture (386+ or
-8086/286), size (XT), or source files (src). (Take a peek in those
-directories if you want to know the file sizes.) You need the following
-files, and only those files, for each flavor: 
-
-386, 486, Pentium 
-
-  i386/ROOT.MNX         - Installation root floppy image
-  i386/USR.MNX          - Installation /usr floppy image
-  i386/USR.TAZ          - Binary /usr files (386 executables.)
-  src/SYS.TAZ           - Operating system sources (libary, kernel, etc.)
-  src/CMD.TAZ           - Commands sources (cp, ls, mkdir, etc.)
-
-286 with 2M+ memory
-286 with a 1.44M floppy drive
-8086/286 with two 720K floppy drives 
-
-  i86/ROOT.MNX          - Installation root floppy image
-  i86/USR.MNX           - Installation /usr floppy image
-  i86/USR.TAZ           - Binary /usr files (8086 executables.)
-  src/SYS.TAZ           - Operating system sources (libary, kernel, etc.)
-  src/CMD.TAZ           - Commands sources (cp, ls, mkdir, etc.)
-  xt/XTBOOT.MNX         - Boot this first if you get "read error 04"
-
-8086/286 with little memory and a 720K floppy drive 
-
-  All of the above and:
-  xt/README             - Tips for installation on PCs with little memory
-  xt/TINYROOT.MNX       - Tiny installation root floppy image
-  xt/XTBOOT.MNX         - Boot this first if you get "read error 04"
-
-8086/286 with little memory and a 360K floppy drive 
-
-  All files in the two sections above and:
-  xt/TINYUSR1.MNX       - Tiny installation /usr floppy part 1
-  xt/TINYUSR2.MNX       - Tiny installation /usr floppy part 2
-
-Running under DOS in 386 mode 
-
-  dosminix.txt          - README (also present in ZIP file)
-  i386/DOSMINIX.ZIP     - Bootstrap and 40M "disk"
-
-Running under DOS in 8086/286 mode
-Running under Windows in a DOS box in 8086 mode (experimental) 
-
-  dosminix.txt          - README (also present in ZIP file)
-  i86/DOSMINIX.ZIP      - Bootstrap and 40M "disk"
-
-The files with names ending in .MNX are sector-by-sector copies of
-Minix boot floppies. The .TAZ files are compressed UNIX tar archives.
-The .ZIP files are archives that can be unpacked by the Windows
-utilities PKZIP or WinZip. 
-
-The two installation floppies ROOT.MNX and USR.MNX can be
-combined on a 1.2 Mb or 1.44 Mb diskette. The .TAZ files must be
-distributed over several floppies. Example for UNIX: 
-
-        cat ROOT.MNX USR.MNX >/dev/floppy
-        dd if=USR.TAZ of=/dev/floppy bs=1440k count=1 skip=0
-        dd if=USR.TAZ of=/dev/floppy bs=1440k count=1 skip=1
-        dd if=USR.TAZ of=/dev/floppy bs=1440k count=1 skip=2
-
-Increase the "skip" count until dd writes a diskette partially. 
-/dev/floppy should be the name of the floppy device. You have to find
-out what your Operating System names it today. Under MS-DOS you
-can use the FDVOL command found in the ../dosutil directory to write
-the floppy images. 
-
-Be careful when you install Minix, many of the commands are
-potentionally dangerous in a way that a simple typing mistake may
-destroy all other data on your system. So make backups first! (The
-DosMinix version, however, is relatively safe.) 
-
-                                                Kees J. Bot (kjb@cs.vu.nl)
-
+CHANGES:
+ - added option -i to readclock to skip machine ID check. In this way the AT-compatible
+   PC5086 RTC can be read, even though the Amstrad report itself as an IBM XT.
+ - removed the segment override "eseg" from "rep movs" in vid_vid_copy and changed the
+   code to use the default DS register. This fix the text scrolling bug.
+ - add F4 hotkey to print console status dump
+ - adds support for RTL8019AS network card upper memory
+ - set defaults in config.h for a PC5086 small kernel
+ 
+TO DO:
+ - modify the ne2000 driver to support 8-bit mode
+ - setup networking on the PC5086
+ - backport dhcpd from Minix 2.0.4
