--- a/README
+++ b/README
@@ -1,4 +1,4 @@
-This repository containes the changes I made to the original Minix 2.0.2 source code
+This repository contains the changes I made to the original Minix 2.0.2 source code
 to run on the Amstrad PC5086.
 
 CHANGES:
@@ -6,11 +6,13 @@ CHANGES:
    PC5086 RTC can be read, even though the Amstrad report itself as an IBM XT.
  - removed the segment override "eseg" from "rep movs" in vid_vid_copy and changed the
    code to use the default DS register. This fix the text scrolling bug.
- - add F4 hotkey to print console status dump
- - adds support for RTL8019AS network card upper memory
+ - added F4 hotkey to print console status dump
+ - added support for RTL8019AS network card upper memory
  - set defaults in config.h for a PC5086 small kernel
+ - added the ne2000xt driver for a NE2000 card in a 8-bit slot. The current code
+   is a copy of ne2000.c that prints some debug information
  
 TO DO:
- - modify the ne2000 driver to support 8-bit mode
- - setup networking on the PC5086
+ - complete the ne2000xt driver to support the NE2000 card in a 8-bit slot
+ - setup and test networking on the PC5086
  - backport dhcpd from Minix 2.0.4
